; ModuleID = '/home/carl/AnghaBench/mongoose/src/extr_mg_net_if.c_mg_if_create_iface.c'
source_filename = "/home/carl/AnghaBench/mongoose/src/extr_mg_net_if.c_mg_if_create_iface.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mg_iface = type { %struct.mg_iface_vtable*, i32*, %struct.mg_mgr* }
%struct.mg_iface_vtable = type { i32 }
%struct.mg_mgr = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.mg_iface* @mg_if_create_iface(%struct.mg_iface_vtable* %0, %struct.mg_mgr* %1) #0 {
  %3 = alloca %struct.mg_iface_vtable*, align 8
  %4 = alloca %struct.mg_mgr*, align 8
  %5 = alloca %struct.mg_iface*, align 8
  store %struct.mg_iface_vtable* %0, %struct.mg_iface_vtable** %3, align 8
  store %struct.mg_mgr* %1, %struct.mg_mgr** %4, align 8
  %6 = call i64 @MG_CALLOC(i32 1, i32 24)
  %7 = inttoptr i64 %6 to %struct.mg_iface*
  store %struct.mg_iface* %7, %struct.mg_iface** %5, align 8
  %8 = load %struct.mg_mgr*, %struct.mg_mgr** %4, align 8
  %9 = load %struct.mg_iface*, %struct.mg_iface** %5, align 8
  %10 = getelementptr inbounds %struct.mg_iface, %struct.mg_iface* %9, i32 0, i32 2
  store %struct.mg_mgr* %8, %struct.mg_mgr** %10, align 8
  %11 = load %struct.mg_iface*, %struct.mg_iface** %5, align 8
  %12 = getelementptr inbounds %struct.mg_iface, %struct.mg_iface* %11, i32 0, i32 1
  store i32* null, i32** %12, align 8
  %13 = load %struct.mg_iface_vtable*, %struct.mg_iface_vtable** %3, align 8
  %14 = load %struct.mg_iface*, %struct.mg_iface** %5, align 8
  %15 = getelementptr inbounds %struct.mg_iface, %struct.mg_iface* %14, i32 0, i32 0
  store %struct.mg_iface_vtable* %13, %struct.mg_iface_vtable** %15, align 8
  %16 = load %struct.mg_iface*, %struct.mg_iface** %5, align 8
  ret %struct.mg_iface* %16
}

declare dso_local i64 @MG_CALLOC(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
